--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,6 +1,13 @@
 <resources>
     <string name="app_name">BPong Shuffler</string>
-    <string name="action_clear">Clear</string>
+    <string name="clear">Clear</string>
+    <string name="about">About</string>
+    <string name="about_text">
+        <![CDATA[
+            <p>Beer Pong teams shuffler application.</p>
+            <p><b>Created By ABGEO.</b></p>
+        ]]>
+    </string>
     <string name="validation_team_name_is_empty">Please, Enter the Team name!</string>
     <string name="validation_team_already_exists">Team "%1$s" already exists!</string>
     <string name="edit">Edit</string>
@@ -10,4 +17,5 @@
     <string name="add">Add</string>
     <string name="save">Save</string>
     <string name="cancel">Cancel</string>
+    <string name="ok">OK</string>
 </resources>
