--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,6 +1,7 @@
 <resources>
     <string name="app_name">BPong Shuffler</string>
     <string name="clear">Clear</string>
+    <string name="shuffle">Shuffle</string>
     <string name="about">About</string>
     <string name="about_text">
         <![CDATA[
@@ -18,4 +19,5 @@
     <string name="save">Save</string>
     <string name="cancel">Cancel</string>
     <string name="ok">OK</string>
+    <string name="shuffle_result">Shuffle result</string>
 </resources>
