--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -20,4 +20,5 @@
     <string name="cancel">Cancel</string>
     <string name="ok">OK</string>
     <string name="shuffle_result">Shuffle result</string>
+    <string name="teams_list_empty_text">Teams list is empty</string>
 </resources>
